# netgraph

./: README.md  REVIEW.md  Self_Sustain_Parser_sys_design_v2.md  Self_Sustain_Parser_sys_design_v3.md  configz.code-workspace  debug_bgp.py  debug_bgp2.py  info.txt  main.py  pyproject.toml  test_eos_parser.py  test_eos_parser_detailed.py  test_ios_parser.py  test_ios_parser_detailed.py  test_new_protocols.py
configz/models/: __init__.py  acl.py  base.py  bgp.py  community_list.py  interface.py  isis.py  ospf.py  parsed_config.py  prefix_list.py  route_map.py  static_route.py  vrf.py
configz/parsers/: __init__.py  base.py  eos_parser.py  ios_parser.py
docs/: ARCHITECTURE.md  ConfigZ_Skills_Layer_Addendum_v3.1.md  EOS_PARSER_SUPPORT.md  IOSXR_PARSER_SUPPORT.md  IOS_PARSER_SUPPORT.md  NXOS_PARSER_SUPPORT.md  PARSER_SUPPORT_MATRIX.md  _from_management_for_open_source.txt  poojan_notes.txt  self_sustaining_parser_system_design_v1.md
examples/: eos.html  ios.html  ios_xe.html  ios_xr.html  nxos.html
netgraph/: cli.py
netgraph/analysis/: __init__.py  dependency_resolver.py
netgraph/graph/: __init__.py  builder.py
netgraph/models/: __init__.py  acl.py  banner.py  bfd.py  bgp.py  community_list.py  crypto.py  eem.py  eigrp.py  interface.py  ipsla.py  isis.py  line.py  logging_config.py  multicast.py  nat.py  ntp.py  object_tracking.py  ospf.py  parsed_config.py  prefix_list.py  qos.py  rip.py  route_map.py  snmp.py  static_route.py  vrf.py
netgraph/parsers/: __init__.py  base.py  eos_parser.py  ios_parser.py  iosxr_parser.py  nxos_parser.py
tests/: stdout.txt
(+3 files in other folders)
